# lms_python_labs_kulagin

./: docker-compose.yml  main.py  pyproject.toml
src/events_agg/core/: config.py
src/events_agg/db/: session.py
